// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Function CodeUri can be set at the function 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs20.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function CodeUri can be set global or at the function 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "CodeUri": "src/my-lambda",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs20.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function CodeUri can be set globally 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "CodeUri": "src/my-lambda",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs20.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Handler can be set at the function 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs20.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Handler can be set global and at function 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "Handler": "app.globalHandler",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs20.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Handler can be set globally 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "Handler": "app.handler",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs20.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set at the function to nodejs14.x 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs14.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set at the function to nodejs14.x 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs14.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set at the function to nodejs16.x 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs16.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set at the function to nodejs18.x 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs18.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set at the function to nodejs20.x 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs20.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set global and at function 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "Runtime": "nodejs18.x",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs20.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set globally to nodejs14.x 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "Runtime": "nodejs14.x",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set globally to nodejs14.x 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "Runtime": "nodejs14.x",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set globally to nodejs16.x 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "Runtime": "nodejs16.x",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set globally to nodejs18.x 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "Runtime": "nodejs18.x",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`Function Runtime can be set globally to nodejs20.x 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "Runtime": "nodejs20.x",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`It ignores non AWS::Serverless::Function resosurces 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Resources": Object {
          "FakeResource": Object {
            "Type": "AWS::FakeResource::NahNah",
          },
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs20.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`JS output files uses outFile parameter 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/index.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "Runtime": "nodejs20.x",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "index.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`When the template is in a subfolder it should match the happy snapshot 1`] = `
Object {
  "entryPoints": Object {
    "xxx#MyLambda": "./xxx/src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/xxx/.aws-sam/build/MyLambda",
      "name": "xxx:MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/xxx/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": "xxx/.aws-sam/build",
      "entryPointName": "xxx#MyLambda",
      "outFile": "./xxx/.aws-sam/build/MyLambda/app.js",
      "projectKey": "xxx",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "Runtime": "nodejs20.x",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;

exports[`can be set global and at function 1`] = `
Object {
  "entryPoints": Object {
    "MyLambda": "./src/my-lambda/app",
  },
  "launchConfigs": Array [
    Object {
      "address": "localhost",
      "localRoot": "\${workspaceFolder}/.aws-sam/build/MyLambda",
      "name": "MyLambda",
      "outFiles": Array [
        "\${workspaceFolder}/.aws-sam/build/MyLambda/**/*.js",
      ],
      "port": 5858,
      "protocol": "inspector",
      "remoteRoot": "/var/task",
      "request": "attach",
      "skipFiles": Array [
        "/var/runtime/**/*.js",
        "<node_internals>/**/*.js",
      ],
      "sourceMaps": true,
      "stopOnEntry": false,
      "type": "node",
    },
  ],
  "samConfigs": Array [
    Object {
      "buildRoot": ".aws-sam/build",
      "entryPointName": "MyLambda",
      "outFile": "./.aws-sam/build/MyLambda/app.js",
      "projectKey": "default",
      "samConfig": Object {
        "AWSTemplateFormatVersion": "2010-09-09",
        "Globals": Object {
          "Function": Object {
            "Runtime": "nodejs18.x",
          },
        },
        "Resources": Object {
          "MyLambda": Object {
            "Properties": Object {
              "CodeUri": "MyLambda",
              "Handler": "app.handler",
              "Runtime": "nodejs20.x",
            },
            "Type": "AWS::Serverless::Function",
          },
        },
        "Transform": "AWS::Serverless-2016-10-31",
      },
      "templateName": "template.yaml",
    },
  ],
}
`;
